deploy/overlays/prd-apps/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slashbay
  labels:
    app.kubernetes.io/name: slashbay
    managed-by: gitops
