deploy/overlays/prd-apps/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slashbay
  namespace: slashbay
  labels:
    app: slashbay
    app.kubernetes.io/name: slashbay
spec:
  type: ClusterIP
  selector:
    app: slashbay
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
